@@ -18,6 +18,7 @@ import org.slf4j.LoggerFactory;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.sql.*;
+import java.util.Arrays;
 
 /**
  * 仅 milvus 数据源查询
@@ -37,8 +38,8 @@ public class MilvusJdbcDemo {
         Class.forName(MILVUS_JDBC_DRIVER);
         Connection connection = DriverManager.getConnection(MILVUS_JDBC_URL, USER, PASS);
 
-        String filePath = "C:\\Users\\renjt1\\rjt\\project\\milvus-jdbc-driver\\milvus-jdbc-example\\src\\main\\resources\\query_3.sql";
-        String sql = Files.readString(Paths.get(filePath));
+        String filePath = "C:\\Users\\renjt1\\rjt\\project\\milvus-jdbc-driver\\milvus-jdbc-example\\src\\main\\resources\\query_7.sql";
+        String sql = Arrays.toString(Files.readAllBytes(Paths.get(filePath)));
 
         System.out.println("初始计划===================");
         printPlan(connection, sql);
